# langtonsant

./: .gitignore  .gitmodules  readme.md
src/langton/: CMakeLists.txt  build.sh
src/langton/src/: initant.inc  langant.s
src/plot1/: CMakeLists.txt  build.sh
src/plot1/src/: apple2bin.cfg  plot1.s
